add content for experiment 1

--- a/BP_Erwartungshorizont.tex
+++ b/BP_Erwartungshorizont.tex
@@ -66,26 +66,80 @@
 
 \subsection{Spannung, Potential und Strom}
 
+\underline{Spannung U}
+
+"Stärke" einer Spannung, Ursache für elektrischen Strom \\
+
+\underline{Potential}
+
+Spannung zwischen einem Punkt und Referenz \\
+
+\underline{Strom}
+
+Ladung pro Zeit \\
 
 %-------------------------------------------------------------------
 
 \subsection{Geräte}
 
+\underline{Oszilloskop}
+
+Spannung wird zu festen Zeitpunkten gemessen, digitalisiert und als Kurve dargestellt \\
+
+\underline{Funktionsgenerator}
+
+erzeugt zeitlich periodische Spannungsverläufe \\
+
+\underline{Mulitmeter}
+
+Messgerät für Spannung, Strom und Widerständen \\
 
 %-------------------------------------------------------------------
 
 \subsection{Bauteile}
 
+\underline{Widerstand R}
+
+begrenzt Stromfluss bei Spannungsdifferenz \\
+
+$R= \dfrac{U}{I}$ \\
+
+\underline{Kondensator}
+
+speichert Ladung/ Energie, braucht Zeit zum Laden\\
+
+$C= \dfrac{Q}{U}$ \\
+
+\underline{Diode}
+
+lässt Strom in eine Richtung durch \\
+
+$I_{D}= I_{S} (e^{ \dfrac{U}{U_{T}}} - 1)$ \\
 
 %-------------------------------------------------------------------
 
 \subsection{Frequenz}
 
+Formel : $f = \dfrac{1}{T}$ \\
 
 %-------------------------------------------------------------------
 
 \subsection{Tiefpass}
 
+\begin{itemize}
+\item "Filter"
+\item Signalanteile unter Grenzfrequenz annähernd ungeschwächt passierbar
+\item Anteile mit hohen Frequenzen dämpfen
+\end{itemize}
+\\
+
+\underline{Grenzfrequenz}
+
+nach Überschreitung der Grenzfrequenz $f_{C}$ am Ausgang eines Bauteils sinkt die Spannung \\
+
+\underline{Phasenverschiebung}
+
+System reagiert zeitlich verzögert auf Eingabe, bzw. Kondensator benötigt Zeit zum Laden und Entladen \\ 
 
 %-------------------------------------------------------------------
 
