hinzufügen der Korrektur

--- a/BP_Versuch1.tex
+++ b/BP_Versuch1.tex
@@ -289,5 +289,22 @@ Graph 8: Kennlinie der weißen Leuchtdiode \\
 
 \section{Versuchsprotokoll}
 
+%----------------------------------------------------------------------------------------
+
+\newpage
+
+\section{Korrektur}
+
+\underline{Phasenverschiebung}
+
+Der Kondensator will dieselbe Spannung wie die Eingangsspannung annehmen. Dafür muss der Kondensator erst aufladen. D.h. es entsteht eine Verzögerungszeit beim Aufladevorgang, da der Widerstand den Stromfluss begrenzt und der Kondensator sich aufladen muss. Dadurch entsteht die Phasenverschiebung bei den Sinuskurven. \\
+
+Formel: \\ 
+$\varphi = atan(-wRC) = atan(-2 \pi RC) \approx 53,9^{\circ}$ \\ 
+
+D.h. die Sinuskurven müssten eigentlich um 53,9 Grad verschoben sein. 
+Bei einer Rechtecksspannung macht eine Phasenverschiebung keinen Sinn, da die diese direkt die Lade und Entladekurve anzeigtm d.h. es sind 2 unterschiedliche Kurvenverläufe.
+
+
 
 \end{document}
