--- a/BP_Versuch5.tex
+++ b/BP_Versuch5.tex
@@ -80,7 +80,7 @@ Adr. & Befehl &Steuerung & & Bus & Register & & & ALU & & Flags & \\
 \hline
 Steuerung & & Bus & & Register & & & & ALU & & & Flags \\
 \hline
-MAC & NA & WR & EN & MRG AA & MRG AB & MRG WS & MRG WE & Malu IA & Malu IB & Malus & MCH Flags \\
+MAC & NA & WR & EN & AA & AB & WS & WE & Malu IA & Malu IB & Malus & MCH Flags \\
 \hline
 \end{tabular} \\
 
