Add table of contents

--- a/BP_Aufgaben.tex
+++ b/BP_Aufgaben.tex
@@ -64,6 +64,11 @@
 
 \section{Geräteeinführung}
 
+\subsection{Geräteeinführung}
+
+\subsection{Tiefpass}
+
+\subsection{Kennlinie von Widerstand und Dioden}
 
 %----------------------------------------------------------------------------------------
 
@@ -71,6 +76,15 @@
 
 \section{Digitale Elektronik}
 
+\subsection{Kennlinie des n-Kanal-MOS-FET}
+
+\subsection{Inverter und NOR-Gatter}
+
+\subsection{XOR-Gatter}
+
+\subsection{Inverterkette mit Rückkopplung}
+
+\subsection{Hazards}
 
 %----------------------------------------------------------------------------------------
 
@@ -78,6 +92,13 @@
 
 \section{Digitaler Schaltungsentwurf}
 
+\subsection{Prellende Taster}
+
+\subsection{Diskretes Master-Slave D-Flipflop}
+
+\subsection{Synchroner 4-Bit Gray Zähler}
+
+\subsection{1-Bit Addierer mit Carry In und Carry Out}
 
 %----------------------------------------------------------------------------------------
 
@@ -85,6 +106,13 @@
 
 \section{Programmierbare Logik}
 
+\subsection{Einführung}
+
+\subsection{Register}
+
+\subsection{4-Bit Multiplexer}
+
+\subsection{4-Bit Addierer und Subtrahierer}
 
 %----------------------------------------------------------------------------------------
 
@@ -92,12 +120,22 @@
 
 \section{Minirechner 2i}
 
+\subsection{Bedienung des Minirechners}
+
+\subsection{Rechenaufgaben}
+
+\subsection{Mikroprogramme}
+
+\subsection{Mikroprogramm zur Kontoführung}
+
 %----------------------------------------------------------------------------------------
 
 \newpage
 
 \section{Minirechner 2a}
 
+\subsection{einfache Maschinenprogramme}
 
+\subsection{Assemblerprogramme}
 
 \end{document}
