--- a/BP_Aufgaben.tex
+++ b/BP_Aufgaben.tex
@@ -66,6 +66,13 @@
 
 \subsection{Geräteeinführung}
 
+\begin{enumerate}
+\item Überprüfen Sie ob sich die Tastköpfe in der Stellung 10x befinden.
+\item Überprüfen Sie den Tastkopfabgleich für das Oszilloskop, indem Sie die Tastköpfe nacheinander mit dem im Oszilloskop eingebauten Signalgenerator verbinden. Es sollte eine saubere Rechtecksspannung ohne über- und untersteuernde Flanken dargestellt werden. Sollte dies nicht der Fall sein, so müssen die Tastköpfe abgeglichen werden. Wenden Sie sich dazu an einen Betreuer.
+\item Erzeugen Sie mit Hilfe des Funktionsgenerators ein sinusförmiges Signal und legen Sie es auf einen der beiden Eingangskanäle des Oszilloskops. Verändern Sie nacheinander die Stellung der folgenden Regler: Horizontal Position, Vertical Position, Volts/Div, Sec/Div. Stellen Sie mit Hilfe der oben genannten Regler das Oszilloskop so ein, dass Sie die Frequenz des sinusförmigen Eingangssignal bestmöglich bestimmen können.
+\item Skizzieren Sie maßstabsgerecht das Eingangssignal und bestimmen Sie rechnerisch dessen Frequenz! Stimmt diese mit der vom Oszilloskop berechneten Frequenz überein?
+\end{enumerate}
+
 \subsection{Tiefpass}
 
 \subsection{Kennlinie von Widerstand und Dioden}
