--- a/BP_Aufgaben.tex
+++ b/BP_Aufgaben.tex
@@ -75,6 +75,23 @@
 
 \subsection{Tiefpass}
 
+Bauen Sie auf dem analogen Experimentierboard einen Tiefpass mit der Schaltung aus Abbildung auf. Wählen Sie dazu den richtigen Widerstand aus und überprüfen Sie ihre Wahl mit Hilfe des Digitalmultimeters. \\
+
+Verbinden Sie den Punkt A mit dem Ausgang des Funktionsgenerators. Dieser sollte auf 1k (= 1000 Hz) eingestellt sein. Messen Sie mit Kanal 1 des Oszilloskops den Spannungsverlauf U(A) am Punkt A, mit Kanal 2 den Spannungsverlauf U(B) an Punkt B. Verwenden Sie für den Funktiongenerator, das Oszilloskop und den Kondensator eine gemeinsame Referenz an Punkt R. Stellen Sie das Oszilloskop so ein, dass Sie die Eingangssignale optimal messen können. Achten Sie bei den folgenden Versuchen darauf, dass Sie für Kanal 1 und 2 am Oszilloskop immer die gleichen Einstellung wählen. \\
+
+\begin{enumerate}
+\item Berechnen Sie als Vorbereitung zuhause mit Hilfe einer geeigneten Formel die Grenzfrequenz der Schaltung. Welche Bedeutung hat diese Frequenz?
+\item Messung des Tiefpasses für eine Sinusspannung
+\begin{itemize}
+\item Stellen Sie am Funktionsgenerator eine Sinusspannung von 1 kHz ein. Drehen Sie den Regler für die Frequenz über den gesamten Bereich. Beobachten und beschreiben Sie die Veränderungen.
+\item Skizzieren Sie maßstabsgerecht die beiden gemessenen Kanäle bei einer Frequenz von 1000 Hz
+\item Bestimmen Sie bei einer Frequenz von 1 kHz und 5 kHz das Spannungsverhältnis von Ausgangs- zu Eingangsspannung $\dfrac{U(B)}{U(A)}$ sowie die Phasenverschiebung.
+\item Beschreiben Sie die Unterschiede der Kurven bei 1 kHz und 5 kHz.
+\end{itemize}
+\item Führen Sie die Aufgaben unter 2b ebenso für die Rechtecksspannung durch.
+\item Machen Sie sich klar, wodurch die Phasenverschiebung bei einem Tiefpass wie in Abbildung entsteht und erklären Sie diese anhand Ihrer Beobachtungen bei angelegter Sinus- und Rechtecksspannung in Ihrer Ausarbeitung.
+\end{enumerate}
+
 \subsection{Kennlinie von Widerstand und Dioden}
 
 %----------------------------------------------------------------------------------------
