--- a/BP_Aufgaben.tex
+++ b/BP_Aufgaben.tex
@@ -94,6 +94,28 @@ Verbinden Sie den Punkt A mit dem Ausgang des Funktionsgenerators. Dieser sollte
 
 \subsection{Kennlinie von Widerstand und Dioden}
 
+Nehmen Sie die Kennlinien folgender Bauteile auf: ein $330 \Omega$ Widerstand, eine Universaldiode, eine rote und weiße Leuchtdiode. Verwenden Sie zur Messung folgende Schaltung. \\
+
+Verbinden Sie den Punkt A mit dem Ausgang des Funktionsgenerators. Messen Sie mit Kanal 1 des Oszilloskops den Spannungsverlauf U(B) am Punkt B, mit Kanal 2 den Spannungsverlauf U(C) an Punkt C. Verwenden Sie für den Funktionsgenerator, das Oszilloskop und den $10 \Omega$ Messwiderstand eine gemeinsame Referenz an Punkt R. Stellen Sie das Oszilloskop und den Funktionsgenerator so ein, dass Sie die Eingangssignale im XY-Modus des Oszilloskops optimal messen können. \\
+
+\begin{enumerate}
+
+\item Vorbereitung
+\begin{enumerate}
+\item Machen Sie sich bei der Vorbereitung zuhause mit den allgemeinen Literaturkennlinien von Diode und Widerstand und ihren charakteristischen Eigenschaften vertraut und zeichnen Sie diese auf.
+\item Wie funktioniert die Schaltung zur Messung der Kennlinie, welcher Messfehler entsteht dadurch?
+\item Berechnen Sie den durch die verwendete Messschaltung bei der Messung von U(B) verursachten Messfehler bei $I = 6 mA$.
+\item Wozu verwendet man den Funktionsgenerator; könnte man die Kennlinien auch ohne diesen erstellen?
+\end{enumerate}
+
+\item Messung
+\begin{enumerate}
+\item Skizzieren Sie jeweils maßstabsgetreu die Dioden-/Widerstandskennlinie.
+\item Bestimmen Sie bei den Dioden jeweils die Durchlassspannung $U_{D}$ bei einem Durchlassstrom $I = 6 mA$ und zeichnen Sie bei den gemessenen Dioden $U_{D}$ in die Kennlinien ein.
+\item Vergleichen Sie die gemessenen Kennlinien mit den allgemeinen Literaturkennlinien der Bauteile.
+\end{enumerate}
+\end{enumerate}
+
 %----------------------------------------------------------------------------------------
 
 \newpage
