add ex1 and ex2

--- a/BP_Aufgaben.tex
+++ b/BP_Aufgaben.tex
@@ -124,7 +124,25 @@ Verbinden Sie den Punkt A mit dem Ausgang des Funktionsgenerators. Messen Sie mi
 
 \subsection{Kennlinie des n-Kanal-MOS-FET}
 
+Messen Sie mit Hilfe des Oszilloskops die Kennlinie des n-Kanal-MOS-FET BS107(A). \\
+
+\begin{enumerate}
+\item Benutzen Sie den Ausgang Strommessung auf dem analogen Experimentierboard um die Kennlinie für den Drain-Strom $I_{D}$ in Abhängigkeit der Gate-Source-Spannung $U_{GS}$ bei konstanter Drain-Source-Spannung $U_{DS}$ von 5V  zu messen.
+\item Protokollieren Sie den genauen Verlauf der Kennlinie.
+\end{enumerate}
+
 \subsection{Inverter und NOR-Gatter}
+
+Inverter und NOR-Gatter aus einzelnen Transistoren \\
+
+\begin{enumerate}
+\item Bauen Sie auf dem analogen Experimentierboard mit den MOS-FETs BS107(A) (n-Kanal) und BSS110 bzw. BS250 (p-Kanal) einen Inverter auf.
+\item Überlegen Sie sich als Vorbereitung, wie Sie mit Hilfe der auf dem Board vorhandenen Schaltungen, dem Funktionsgenerator und dem Oszilloskop die folgende Kennlinien der Inverter-Schaltung aufnehmen können: Ausgangsspannung gegen Eingangsspannung / Querstrom gegen Eingangsspannung.
+\item Messen und protokollieren Sie den genauen Verlauf der Inverterkennlinie (Ausgangsspannung gegen Eingangsspannung)
+\item Messen und protokollieren Sie den genauen Verlauf des Querstroms (Querstrom gegen Eingangsspannung)
+\item Wir bauen ein dynamisches RAM auf: Schalten Sie dazu zwischen den Eingang des Inverters und der Masse einen Kondensator mit einer Kapazität von 100nF. Legen Sie dann über einen Draht abwechselnd kurzfristig +5V und Masse an den Eingang und beobachten Sie dabei die Ausgangsspannung mit Hilfe des Oszilloskops. Würden Sie nun diese Schaltung $2^{35}$-mal aufbauen, so erhielten Sie ein 4 GB großes dynamisches RAM.
+\item Erweitern Sie den Inverter zu einem NOR-Gatter. Dazu stehen zwei weitere MOS-FETs zur Verfügung. Überprüfen Sie die korrekte Funktion des Gatters. Protokollieren Sie die Schaltung und die Funktionstabelle.
+\end{enumerate}
 
 \subsection{XOR-Gatter}
 
