--- a/BP_Aufgaben.tex
+++ b/BP_Aufgaben.tex
@@ -146,6 +146,13 @@ Inverter und NOR-Gatter aus einzelnen Transistoren \\
 
 \subsection{XOR-Gatter}
 
+Entwerfen Sie als Vorbereitung zuhause zwei Schaltungen für ein XOR Gatter: Einmal mit Hilfe von AND-, OR- und NOT-Gattern und dann mit Hilfe von NAND-Gattern. \\
+
+\begin{enumerate}
+\item Bauen Sie das mit Hilfe AND-,OR- und NOT-Gattern entworfene XOR-Gatter auf dem digitalen Experimentierboard auf und überprüfen Sie die Funktionsweise. Legen Sie dazu den Ausgang der Schaltung auf eine vorhandene LED und zeigen Sie mit dem Anlegen von 0V und 5V an den Eingängen, dass die Funktionstabelle des XOR-Gatters für beide Schaltungen erfüllt ist. 
+\item Überprüfen Sie nun auf gleiche Weise Ihre mit NAND-Gattern entworfene Schaltung für XOR-Gatter.
+\end{enumerate}
+
 \subsection{Inverterkette mit Rückkopplung}
 
 \subsection{Hazards}
