--- a/BP_Aufgaben.tex
+++ b/BP_Aufgaben.tex
@@ -155,6 +155,11 @@ Entwerfen Sie als Vorbereitung zuhause zwei Schaltungen für ein XOR Gatter: Ein
 
 \subsection{Inverterkette mit Rückkopplung}
 
+I\begin{enumerate}
+\item Bauen Sie auf dem digitalen Experimentierboard eine Schaltung aus 5 hintereinandergeschalteten Invertern auf. Verbinden Sie dann das Ausgangssignal des letzten Inverters mit dem Eingang des ersten um eine Rückkopplung zu realisieren.
+\item Beobachten Sie das oszillierende Ausgangssignal und protokollieren Sie dieses. Messen Sie dessen Frequenz und erklären Sie, wie es zu diesem Phänomen kommt.
+\end{enumerate}
+
 \subsection{Hazards}
 
 %----------------------------------------------------------------------------------------
