--- a/BP_Aufgaben.tex
+++ b/BP_Aufgaben.tex
@@ -162,6 +162,15 @@ I\begin{enumerate}
 
 \subsection{Hazards}
 
+Hazards in einem einfachen Schaltnetzes \\
+
+\begin{enumerate}
+\item Bauen Sie die Schaltung auf dem digitalen Experimentierboard auf.
+\item Legen Sie ein Rechteckssignal an den Eingang an und protokollieren Sie das Eingangs- und Ausgangssignal.
+\item Erklären Sie, wie es zu einem Hazard kommen kann.
+\item Verändern Sie den oberen Pfad der aufgebauten Schaltung so, dass kein Hazard entstehen kann, und protokollieren Sie wieder Eingangs- und Ausgangssignal.
+\end{enumerate}
+
 %----------------------------------------------------------------------------------------
 
 \newpage
